# Dice-Roller-Haskell-Final-Project

./: CHANGELOG.md  LICENSE  Main.hs  haskellFinal.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: ErrorChecking.hs  Misc.hs  features.hs
